Fixed bug where breadboard svg was bleeding through and stealing focus.
By setting the opacity at 0.9999 the display remains the same but now the border doesn't bleed through the overlay div.  This bleed through caused the input element to not gain focus when the input part overlaying the breadboard clicked.

--- a/app/public/css/tt.css
+++ b/app/public/css/tt.css
@@ -25,6 +25,11 @@ th {
   background-color: white;
 }
 
+/* fix bug in MathPad overlay - the breadboard svg 'bleeds though' the MathPad overlay at full opacity and steals focus */
+#breadboard-wrapper {
+  opacity: 0.9999;
+}
+
 .tt-notes:before{
   font-weight:700;
   content:"Notes:";
